tests/baselines/reference/numberToString.errors.txt
tests/cases/compiler/numberToString.ts(2,5): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/compiler/numberToString.ts(9,4): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/numberToString.ts (2 errors) ====
    function f1(n:number):string {
        return n; // error return type mismatch
        ~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    }
    
    function f2(s:string):void {
    }
    
    f1(3);
    f2(3); // error no coercion to string
       ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    f2(3+""); // ok + operator promotes
    